Revision history for PostScript::Calendar

1.01   NOT
	- Use the function library provided by PostScript::File 2.20

1.00   November 11, 2010
	- No functional changes
	- Restart test if necessary to pick up timezone change (Windows)

0.06   September 27, 2010
	- Add a Creator comment only if we create the PostScript::File object
	- Document that passing ps_file => undef creates a new object
	- List the fonts we use even when given a ps_file
	- Force timezone in tests for consistent results
	- Figured out how to avoid Latin-1 in POD (S<C<< >>> works correctly)

0.05   March 15, 2010
	- PostScript::File 2.00 now provides pstr and metrics
	  Font::AFM is no longer required!
	  This makes it much easier to get PostScript::Calendar working.
	- Now possible to include multiple calendars in one PostScript file
	  See example/calendar.pl for one way to do that.
	- The ps_file method actually works now
	- Switch to Dist::Zilla for packaging

0.04   June 25, 2008
	- No functional changes
	- Minor clean up to documentation
	- Exclude ProhibitAccessOfPrivateData from perlcritic.t
	- Skip perlcritic.t under AUTOMATED_TESTING
	- Use Module::Build::DistVersion for packaging

0.03   April 5, 2007
	- Round dimensions to integers to avoid subtle errors (RT#26090)

0.02   April 4, 2007
	- Setting title to the empty string now suppresses the title (RT#26089)
	- Bug fixes:
	  - add_event didn't respect newlines as documented
	  - label_font was ignored
	- Documentation fixes

0.01   March 25, 2007
	- Initial release