@@ -173,6 +173,7 @@ sub new
       right       => $self->{sideMar},
       title       => PostScript::File->pstr($self->{title}),
       reencode    => 'cp1252',
+      strip       => 'all_comments',
       landscape   => $p{landscape},
     );
 
