@@ -84,26 +84,22 @@ if ($generateResults) {
 %%EndComments
 %%BeginProlog
 %%BeginResource: procset PostScript_Calendar 0 0
-/pixel {72 mul 300 div} bind def % 300 dpi only
-%---------------------------------------------------------------------
-% Display text events:  X Y [STRING ...] Events
+/pixel {72 mul 300 div} bind def
 /Events
 {
 EventFont setfont
 {
-2 index      % stack X Y STRING X
-3 -1 roll    % stack X STRING X Y
-dup          % stack X STRING X Y Y
+2 index
+3 -1 roll
+dup
 EventSpacing sub
-4 1 roll     % stack X Y' STRING X Y
+4 1 roll
 newpath
 moveto
 show
 } forall
-pop pop        % pop off X & Y
+pop pop
 } bind def
-%---------------------------------------------------------------------
-% Fill a day rect with the current ink:
 /FillDay
 {
 newpath
@@ -114,8 +110,6 @@ DayWidth DayHeight lineto
 closepath
 fill
 } bind def
-%---------------------------------------------------------------------
-% Shade a day with the default background:
 /ShadeDay
 {
 0.85 setgray
