@@ -2,6 +2,7 @@ Revision history for PostScript::Calendar
 
 1.01   NOT
 	- Use the function library provided by PostScript::File 2.20
+	- All comments are stripped from the generated PostScript
 
 1.00   November 11, 2010
 	- No functional changes
